// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pages Snapshot Tests > Index Page > should match snapshot 1`] = `
<div>
  <div
    class="min-h-screen flex items-center justify-center bg-background"
  >
    <div
      class="text-center"
    >
      <h1
        class="text-4xl font-bold mb-4"
      >
        Welcome to Your Blank App
      </h1>
      <p
        class="text-xl text-muted-foreground"
      >
        Start building your amazing project here!
      </p>
    </div>
  </div>
</div>
`;

exports[`Pages Snapshot Tests > NotFound Page > should match snapshot 1`] = `
<div>
  <div
    class="min-h-screen flex items-center justify-center bg-gray-100"
  >
    <div
      class="text-center"
    >
      <h1
        class="text-4xl font-bold mb-4"
      >
        404
      </h1>
      <p
        class="text-xl text-gray-600 mb-4"
      >
        Oops! Page not found
      </p>
      <a
        class="text-blue-500 hover:text-blue-700 underline"
        href="/"
      >
        Return to Home
      </a>
    </div>
  </div>
</div>
`;
